UCF-APR2.4/ftr main/force-app/main/default/objects/SterlingQuote__c/SterlingQuote__c.object-meta.xml
<CustomObject>
    <description>Sterling Quote Object</description>
    <label>Quote</label>
    <nameField>
        <label>Quote Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Quotes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>