UCF-APR2.4/ftr main/force-app/main/default/objects/SterlingQuote__c/fields/Collector_Cost__c.field-meta.xml
<CustomField>
    <fullName>Collector_Cost__c</fullName>
    <label>Collector Cost</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>