UCF-APR2.4/ftr main/force-app/main/default/objects/SterlingQuote__c/fields/CPQQuoteId__c.field-meta.xml
<CustomField>
    <fullName>CPQQuoteId__c</fullName>
    <externalId>true</externalId>
    <label>CPQ Quote Id</label>
    <length>40</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>