UCF-APR2.4/ftr main/force-app/main/default/objects/SterlingQuote__c/fields/Created_By_ID__c.field-meta.xml
<CustomField>
    <fullName>Created_By_ID__c</fullName>
    <formula>CASESAFEID( CreatedById )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Created By ID</label>
    <type>Text</type>
</CustomField>