UCF-APR2.4/ftr main/force-app/main/default/objects/SterlingQuote__c/fields/Direct_BB_Total__c.field-meta.xml
<CustomField>
    <fullName>Direct_BB_Total__c</fullName>
    <label>Direct BB Total</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>