UCF-APR2.4/ftr main/force-app/main/default/objects/SterlingQuote__c/fields/Direct_Lata_Summary__c.field-meta.xml
<CustomField>
    <fullName>Direct_Lata_Summary__c</fullName>
    <label>Direct Lata Summary Total</label>
    <precision>14</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>