UCF-APR2.4/ftr main/force-app/main/default/objects/SterlingQuote__c/fields/Direct_OSP_Total__c.field-meta.xml
<CustomField>
    <fullName>Direct_OSP_Total__c</fullName>
    <label>Direct OSP Total</label>
    <precision>14</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>