UCF-APR2.4/ftr main/force-app/main/default/objects/SterlingQuote__c/fields/DSAT_ID__c.field-meta.xml
<CustomField>
    <fullName>DSAT_ID__c</fullName>
    <formula>Quote_Item__r.DSAT_AddressID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>DSAT ID</label>
    <type>Text</type>
</CustomField>