UCF-APR2.4/ftr main/force-app/main/default/objects/SterlingQuote__c/fields/ExpediteIncluded__c.field-meta.xml
<CustomField>
    <fullName>ExpediteIncluded__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Expedite Included</label>
    <type>Checkbox</type>
</CustomField>