UCF-APR2.4/ftr main/force-app/main/default/objects/SterlingQuote__c/fields/ExpirationDateTest__c.field-meta.xml
<CustomField>
    <fullName>ExpirationDateTest__c</fullName>
    <label>Expiration Date</label>
    <type>DateTime</type>
</CustomField>