UCF-APR2.4/ftr main/force-app/main/default/objects/SterlingQuote__c/fields/FTR_Quote_ID__c.field-meta.xml
<CustomField>
    <fullName>FTR_Quote_ID__c</fullName>
    <label>FTR Quote ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>