UCF-APR2.4/ftr main/force-app/main/default/objects/SterlingQuote__c/fields/Is_Sync_Allowed__c.field-meta.xml
<CustomField>
    <fullName>Is_Sync_Allowed__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Is Sync Allowed</label>
    <type>Checkbox</type>
</CustomField>