UCF-APR2.4/ftr main/force-app/main/default/objects/SterlingQuote__c/fields/IsSyncing__c.field-meta.xml
<CustomField>
    <fullName>IsSyncing__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Synced</label>
    <type>Checkbox</type>
</CustomField>