UCF-APR2.4/ftr main/force-app/main/default/objects/SterlingQuote__c/fields/Net_New_MRR__c.field-meta.xml
<CustomField>
    <fullName>Net_New_MRR__c</fullName>
    <formula>OpportunityId__r.Net_New_MRR__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Net New MRR</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>