UCF-APR2.4/ftr main/force-app/main/default/objects/SterlingQuote__c/fields/NRC1__c.field-meta.xml
<CustomField>
    <fullName>NRC1__c</fullName>
    <label>NRC1</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>