UCF-APR2.4/ftr main/force-app/main/default/objects/SterlingQuote__c/fields/OrderId__c.field-meta.xml
<CustomField>
    <fullName>OrderId__c</fullName>
    <label>OrderId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>