UCF-APR2.4/ftr main/force-app/main/default/objects/SterlingQuote__c/fields/PromoExpirationDate__c.field-meta.xml
<CustomField>
    <fullName>PromoExpirationDate__c</fullName>
    <label>Promo Expiration Date</label>
    <type>DateTime</type>
</CustomField>