UCF-APR2.4/ftr main/force-app/main/default/objects/SterlingQuote__c/fields/Quote_Item__c.field-meta.xml
<CustomField>
    <fullName>Quote_Item__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This is to create a relationship between Quote Item and Quote</description>
    <label>Quote Item</label>
    <referenceTo>SterlingQuoteItem__c</referenceTo>
    <relationshipLabel>Quotes</relationshipLabel>
    <relationshipName>Quotes</relationshipName>
    <type>Lookup</type>
</CustomField>