UCF-APR2.4/ftr main/force-app/main/default/objects/SterlingQuote__c/fields/Quote_Number__c.field-meta.xml
<CustomField>
    <fullName>Quote_Number__c</fullName>
    <displayFormat>{00000000}</displayFormat>
    <label>Quote Number</label>
    <type>AutoNumber</type>
</CustomField>