UCF-APR2.4/ftr main/force-app/main/default/objects/SterlingQuote__c/fields/Sales_Stage__c.field-meta.xml
<CustomField>
    <fullName>Sales_Stage__c</fullName>
    <formula>TEXT( OpportunityId__r.StageName )</formula>
    <label>Sales Stage</label>
    <type>Text</type>
</CustomField>