UCF-APR2.4/ftr main/force-app/main/default/objects/SterlingQuote__c/fields/ShaneTempField__c.field-meta.xml
<CustomField>
    <fullName>ShaneTempField__c</fullName>
    <defaultValue>false</defaultValue>
    <label>ShaneTempField</label>
    <type>Checkbox</type>
</CustomField>