UCF-APR2.4/ftr main/force-app/main/default/objects/SterlingQuote__c/fields/Show_Additonal_Quote_Information__c.field-meta.xml
<CustomField>
    <fullName>Show_Additonal_Quote_Information__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Show Additonal Quote Information</label>
    <type>Checkbox</type>
</CustomField>