UCF-APR2.4/ftr main/force-app/main/default/objects/SterlingQuote__c/fields/SPOF_quantity__c.field-meta.xml
<CustomField>
    <fullName>SPOF_quantity__c</fullName>
    <label>SPOF quantity</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>