UCF-APR2.4/ftr main/force-app/main/default/objects/SterlingQuote__c/fields/SterlingQuoteId__c.field-meta.xml
<CustomField>
    <fullName>SterlingQuoteId__c</fullName>
    <caseSensitive>true</caseSensitive>
    <externalId>true</externalId>
    <label>Quote ID</label>
    <length>40</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>