UCF-APR2.4/ftr main/force-app/main/default/objects/SterlingQuote__c/fields/SterlingQuoteKey__c.field-meta.xml
<CustomField>
    <fullName>SterlingQuoteKey__c</fullName>
    <label>Quote Key</label>
    <length>40</length>
    <type>Text</type>
</CustomField>