UCF-APR2.4/ftr main/force-app/main/default/objects/SterlingQuote__c/fields/Sync_Allowed_by_Admin__c.field-meta.xml
<CustomField>
    <fullName>Sync_Allowed_by_Admin__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Sync Allowed by Admin</label>
    <type>Checkbox</type>
</CustomField>