UCF-APR2.4/ftr main/force-app/main/default/objects/SterlingQuote__c/fields/Use_Collector_Allocation__c.field-meta.xml
<CustomField>
    <fullName>Use_Collector_Allocation__c</fullName>
    <label>Use Collector Allocation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
                <default>true</default>
                <label>Yes</label>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>