UCF-APR2.4/ftr main/force-app/main/default/objects/SterlingQuote__c/fields/WS_Quote_Number__c.field-meta.xml
<CustomField>
    <fullName>WS_Quote_Number__c</fullName>
    <description>Auto generated number for wholesale quotes for searching and identifying the quick quote&apos;s RFQ string.</description>
    <displayFormat>{YYYY}{MM}{DD}{0000}</displayFormat>
    <label>WS Quote Number</label>
    <type>AutoNumber</type>
</CustomField>