UCF-APR2.4/ftr main/force-app/main/default/objects/SterlingQuote__c/recordTypes/Carrier_Service.recordType-meta.xml
<RecordType>
    <fullName>Carrier_Service</fullName>
    <active>true</active>
    <description>Carrier Service</description>
    <label>Carrier Service</label>
</RecordType>