UCF-APR2.4/ftr main/force-app/main/default/objects/SterlingQuote__c/recordTypes/SFA.recordType-meta.xml
<RecordType>
    <fullName>SFA</fullName>
    <active>true</active>
    <description>For Quotes within the salesforce</description>
    <label>SFA</label>
</RecordType>