UCF-APR2.4/ftr main/force-app/main/default/objects/SterlingQuote__c/recordTypes/Sterling.recordType-meta.xml
<RecordType>
    <fullName>Sterling</fullName>
    <active>true</active>
    <description>For Quotes in Sterling</description>
    <label>Sterling</label>
</RecordType>