UCF-APR2.4/ftr main/force-app/main/default/objects/SterlingQuote__c/listViews/Carrier_Service.listView-meta.xml
<ListView>
    <fullName>Carrier_Service</fullName>
    <columns>NAME</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <columns>Modified_By_Id__c</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>SterlingQuote__c.Carrier_Service</value>
    </filters>
    <label>Carrier Service</label>
</ListView>