UCF-APR2.4/ftr main/force-app/main/default/objects/SterlingQuote__c/listViews/WSQuotesFOTS_SterlingQuote.listView-meta.xml
<ListView>
    <fullName>WSQuotesFOTS_SterlingQuote</fullName>
    <filterScope>Queue</filterScope>
    <label>WSQuotesFOTS</label>
    <queue>WSQuotesFOTS</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>