UCF-APR2.4/ftr main/force-app/main/default/objects/SterlingQuote__c/listViews/WSQuotesFTTC_SterlingQuote.listView-meta.xml
<ListView>
    <fullName>WSQuotesFTTC_SterlingQuote</fullName>
    <filterScope>Queue</filterScope>
    <label>WSQuotesFTTC</label>
    <queue>WSQuotesFTTC</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>